c_deps/yuri.h

int rust_boarddb_init(void);
int rust_classdb_init(const char *data_dir);
int rust_clandb_init(void);
/**
 * Load configuration from file (C-compatible entry point)
 *
 * # Safety
 * - `cfg_file` must be a valid null-terminated C string
 * - The pointer must remain valid for the duration of the call
 *
 * Returns 0 on success, -1 on failure
 */
int rust_config_read(const char *cfg_file);
/**
 * Initialize the global server state
 * This should be called once at server startup
 */
void rust_core_init(void);
/**
 * Set the termination function callback
 * This replaces set_termfunc() from core.c
 *
 * # Safety
 * The callback function pointer must be valid for the lifetime of the server
 * Pass NULL to clear the termination function
 *
 * Note: We use Option<extern "C" fn()> directly here because:
 * 1. In Rust, Option<fn> has guaranteed NULL representation (None = NULL pointer)
 * 2. This is the standard way to represent nullable function pointers in FFI
 * 3. cbindgen will generate the correct C signature
 */
void rust_set_termfunc(void (*func)(void));
/**
 * Called from C's do_init() before any *_init() calls.
 * url format: "mysql://user:pass@host:port/db"
 */
int rust_db_connect(const char *url);
int rust_itemdb_init(void);
int rust_magicdb_init(void);
/**
 * Allocate the 65535-slot map array, load all maps from DB + files, set C globals.
 * Replaces map_read() in do_init(). Returns 0 on success, -1 on error.
 */
int rust_map_init(const char *maps_dir, int server_id);
int rust_mobdb_init(void);
int rust_recipedb_init(void);
void rust_register_fd_max_updater(void (*cb)(int));
/**
 * Create a listening socket on the specified port.
 * Returns fd on success, -1 on failure.
 *
 * Binds a std::net::TcpListener (sync, safe from any context) and stores it
 * in the SessionManager. Converted to tokio::net::TcpListener at server start.
 */
int rust_make_listen_port(int port);
/**
 * Set default accept callback — called once per new incoming connection.
 * Use this for initial handshake packets (server speaks first).
 *
 * # Safety
 * Callback must be a valid C function pointer.
 */
void rust_session_set_default_accept(int (*callback)(int));
/**
 * Set default parse callback for all new sessions.
 *
 * # Safety
 * Callback must be a valid C function pointer.
 */
void rust_session_set_default_parse(int (*callback)(int));
/**
 * Set default timeout callback.
 *
 * # Safety
 * Callback must be a valid C function pointer.
 */
void rust_session_set_default_timeout(int (*callback)(int));
/**
 * Set default shutdown callback.
 *
 * # Safety
 * Callback must be a valid C function pointer.
 */
void rust_session_set_default_shutdown(int (*callback)(int));
/**
 * Override the parse callback for a specific session.
 *
 * # Safety
 * Callback must be a valid C function pointer.
 */
void rust_session_set_parse(int fd, int (*callback)(int));
/**
 * Override the shutdown callback for a specific session.
 *
 * # Safety
 * Callback must be a valid C function pointer.
 */
void rust_session_set_shutdown(int fd, int (*callback)(int));
/**
 * Initialize timer subsystem (currently a no-op in C)
 */
extern void timer_init(void);
/**
 * Insert a recurring or one-shot timer.
 * `tick` — initial delay (ms), `interval` — repeat interval (ms, 0 = one-shot),
 * `func` — callback `int (*)(int id, int data)`,
 * `id` / `data` — passed through to callback.
 * Returns a timer handle (used with timer_remove).
 */
extern int timer_insert(uint32_t tick, uint32_t interval, int (*func)(int, int), int id, int data);