c_src/map_server.h

struct map_data {
  char title[64];
  char mapfile[1024];
  char maprejectmsg[64];
  struct block_list **block;
  struct block_list **block_mob;
  struct warp_list **warp;
  struct global_reg *registry;

  int max_sweep_count, user, registry_num, id;
  unsigned short xs, ys, bxs, bys, port, bgm, bgmtype;
  unsigned char *map;
  unsigned short *tile, *obj, *pass;
  unsigned int ip, sweeptime;
  unsigned char pvp, spell, light, weather, cantalk, show_ghosts, region,
      indoor, warpout, bind;
  unsigned int reqlvl, reqvita, reqmana, lvlmax, manamax, vitamax;
  unsigned char reqmark, reqpath, summon;
  unsigned char canUse, canEat, canSmoke, canMount, canGroup, canEquip;
};
extern struct map_data *map;
void map_initiddb(void);
void map_initblock();
int lang_read(const char *);
void map_do_term(void);
int map_loadgameregistry();
// map_cronjob ported to Rust — use rust_map_cronjob
int rust_map_cronjob(int, int);