c_src/npc.h

// npc.c has been ported to Rust (src/game/npc.rs).
// Functions below are extern declarations resolving to libyuri.a symbols.

// Called from map_server.rs via extern "C" — keep exact names
extern int npc_init();
extern int warp_init();
extern int npc_runtimers(int, int);